# Python-OC-Lettings-FR

./: .dockerignore  .gitignore  .readthedocs.yaml  README.md  dockerfile  entrypoint.sh  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: ci-cd-pipeline.yml
docs/: requirements.txt
docs/source/: conf.py  dependency.py  deployement.rst  index.rst  installation.rst  quickstart.rst  technical_doc.rst  user_guide.rst
src/: oc-lettings-site.sqlite3
src/lettings/: models.py  urls.py  views.py
src/lettings/migrations/: 0001_initial.py  0002_auto_20241118_1029.py
src/lettings/templates/: lettings_index.html
src/lettings/templates/lettings/: letting.html
src/lettings/tests/: tests_lettings_models.py  tests_lettings_urls.py  tests_lettings_views.py
src/oc_lettings_site/: models.py  settings.py  urls.py  views.py
src/oc_lettings_site/migrations/: 0002_auto_20241112_2306.py
src/oc_lettings_site/templates/: index.html
src/oc_lettings_site/templates/oc_lettings_site/: index.html
src/oc_lettings_site/tests/: tests_oc-lettings-site_urls.py  tests_oc-lettings-site_views.py
src/profiles/: models.py  urls.py  views.py
src/profiles/migrations/: 0002_auto_20241118_1029.py
src/profiles/tests/: tests_profiles_models.py  tests_profiles_urls.py  tests_profiles_views.py
src/profils/: models.py  urls.py  views.py
src/profils/migrations/: 0001_initial.py
src/profils/templates/: profile.html
src/profils/templates/profils/: index.html
src/templates/: 404.html  500.html  base.html
