[metadata]
name = oc_lettings_site
version = 1.0.0
description = Orange County Lettings web site
author = Mothraa
author_email = None
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mothraa/Python-OC-Lettings-FR
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    License :: OSI Approved :: MIT License
    
[flake8]
max-line-length = 99
exclude = **/migrations/*,venv

[tool:pytest]
DJANGO_SETTINGS_MODULE = oc_lettings_site.settings
markers =
    unit: Unit tests
    integration: Integration tests
    functional: Functional tests
pythonpath = src
python_files = tests_*.py
addopts = -v

[coverage:run]
omit =
    */migrations/*
    */tests/*
    */tests.py
    */__init__.py
    */apps.py
    */admin.py
    */manage.py
    */settings.py
    */wsgi.py
    */asgi.py
    */docs/*.py

